# MotionOS

./: .gitignore  CONTRIBUTING.md  COPYRIGHT.md  LICENSE.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements-offline-voice.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: BETA_LAUNCH_NOTES.md  COMMERCIAL_RELEASE_CHECKLIST.md  GITHUB_UPLOAD_CHECKLIST.md  INSTALLER_HANDLING.md  MICROSOFT_STORE_SUBMISSION_NOTES.md  PRIVACY.md  PRIVACY_POLICY.txt  TESTER_NOTES.md  THIRD_PARTY_NOTICES.md
installer/: X75MotionOS.iss
scripts/: build_installer.ps1  build_windows.ps1  build_windows_direct.ps1  capture_store_screenshots.py
src/hands_free_control/: __init__.py  __main__.py  action_executor.py  app.py  camera.py  config.py  hand_tracker.py  launcher.py  logger.py  mouse_controller.py
store-assets/: README.md  StoreListing-X75MotionOS.csv
